--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                <span> <h1 class="site-heading text-center text-white d-lg-none">
           
                     <span class="site-heading-lower">Printon</span>
-                    <span class="site-heading-upper text-primary mb-3">Printing solution</span>
+                    <span class="site-heading-upper text-primary ">Printing solution</span>
                 </h1></span>
                 <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                     <h2 class="section-heading mb-4">
